@@ -275,6 +275,35 @@ class EMRJobRunnerEndToEndTestCase(MockEMRAndS3TestCase):
                                if fd['path'] == bootstrap_file]
         assert_equal(len(matching_file_dicts), 1)
 
+    def test_attach_to_existing_job_flow(self):
+        emr_conn = EMRJobRunner().make_emr_conn()
+        # set log_uri to None, so that when we describe the job flow, it
+        # won't have the loguri attribute, to test Issue #112
+        emr_job_flow_id = emr_conn.run_jobflow(
+            name='Development Job Flow', log_uri=None)
+
+        stdin = StringIO('foo\nbar\n')
+        self.mock_emr_output = {(emr_job_flow_id, 1): [
+            '1\t"bar"\n1\t"foo"\n2\tnull\n']}
+
+        mr_job = MRTwoStepJob(['-r', 'emr', '-v',
+                               '-c', self.mrjob_conf_path,
+                               '--emr-job-flow-id', emr_job_flow_id])
+        mr_job.sandbox(stdin=stdin)
+
+        results = []
+        with mr_job.make_runner() as runner:
+            assert isinstance(runner, EMRJobRunner)
+
+            runner.run()
+
+            for line in runner.stream_output():
+                key, value = mr_job.parse_output_line(line)
+                results.append((key, value))
+
+        assert_equal(sorted(results),
+            [(1, 'bar'), (1, 'foo'), (2, None)])
+
 
 class DescribeAllJobFlowsTestCase(MockEMRAndS3TestCase):
 
